# Summerizer-

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tempChat.txt
Docs/: ProjectStructure.md  TechnicalStructure.md  WhyThisProject.md  plan.md
videoinsight/cli/: commands.py  config.py
videoinsight/config/: default.yaml
videoinsight/core/: analysis.py  downloader.py  markdown.py  transcription.py
videoinsight/utils/: chunking.py  state.py
